--- a/cm/cm/templates/home.html
+++ b/cm/cm/templates/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>App Annie Search By Tag</title>
-<link rel="stylesheet" href="../static/tag/style.css">
+<link rel="stylesheet" href="/css/style.css">
 
     <meta http-equiv="Content-Type" content="text/html;charset=GBK"/>
     <base target="_blank"/><!--[if lte IE 6]> </base> <![endif]-->
@@ -66,7 +66,10 @@
 <div class="background">
     <div id="stage"></div>
 </div>
-<script src="../static/tag/main.js"></script>
+<script src="/js/main.js"></script>
+<script type="text/javascript">
+window.testData ={{ test }};
+</script>
 
 </body>
 </html>
