add mock up data

--- a/cm/cm/templates/home.html
+++ b/cm/cm/templates/home.html
@@ -66,10 +66,10 @@
 <div class="background">
     <div id="stage"></div>
 </div>
-<script src="/js/main.js"></script>
 <script type="text/javascript">
-window.testData ={{ test }};
+window.tagDatas ={{ tagDatas }};
 </script>
 
+<script src="/js/main.js"></script>
 </body>
 </html>
