--- a/cm/cm/templates/home.html
+++ b/cm/cm/templates/home.html
@@ -2,11 +2,9 @@
 <html>
 <head>
 <title>App Annie Search By Tag</title>
-<link rel="stylesheet" href="/css/style.css">
 
     <meta http-equiv="Content-Type" content="text/html;charset=GBK"/>
-    <base target="_blank"/><!--[if lte IE 6]> </base> <![endif]-->
-    <link rel="stylesheet" type="text/css" href="http://img1.cache.netease.com/product/tag/2.2/style/index.css" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
 
     <style type="text/css" id="animation_rules">
         @-webkit-keyframes left-out {
@@ -64,7 +62,6 @@
 window.tagDatas ={{ tagDatas }};
 </script>
 <div class="hd">
-    <a href="http://tag.163.com" target="_self" ></a>
     <span class="refresh-bg"><a target="_self" id="refresh"></a></span>
     <a target="_self" class="vipbtn" id="js-vipbtn" style="display:none;"></a>
     <div id="nav_bar" class="nav-bar">
