--- a/cm/cm/templates/home.html
+++ b/cm/cm/templates/home.html
@@ -55,6 +55,22 @@
                 -webkit-transform: translateY(0);
             }
         }
+        @-webkit-keyframes bottom-out {
+            0% {
+                -webkit-transform: translateY(0);
+            }
+            100% {
+                -webkit-transform: translateY(-640px);
+            }
+        }
+        @-webkit-keyframes bottom-in {
+            0% {
+                -webkit-transform: translateY(640px);
+            }
+            100% {
+                -webkit-transform: translateY(0);
+            }
+        }
     </style>
 </head>
 <body>
